2025-09-13T01:24:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17689751947 # 1219
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-13
* notice: last 14d: unq all: 78 136
* notice: prev accum: outdated-unq outdated-all / unq all: 4672 9525 / 4766 9653
* notice: next accum: outdated-unq outdated-all / unq all: 4672 9525 / 4773 9661
* notice: prev exec diff / last date diff / accum: unq all: +7 +8 -0 -0 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [] / [2025-09-12]

2025-09-12T12:40:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17674724342 # 1218
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-12
* notice: last 14d: unq all: 74 128
* notice: prev accum: outdated-unq outdated-all / unq all: 4667 9518 / 4766 9653
* notice: next accum: outdated-unq outdated-all / unq all: 4672 9525 / 4766 9653
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-29] / []

2025-09-12T01:35:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17661905775 # 1217
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-12
* notice: last 14d: unq all: 75 130
* notice: prev accum: outdated-unq outdated-all / unq all: 4667 9518 / 4765 9652
* notice: next accum: outdated-unq outdated-all / unq all: 4667 9518 / 4766 9653
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -5 / +15 +20 -0 -0 / 15 20
* notice: removed / changed dates: [] / [2025-08-29 2025-09-11]

2025-09-11T12:40:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17644829565 # 1216