@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-31T01:45:45Z",
-  "count" : 3,
+  "timestamp" : "2025-09-13T12:36:53Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 3,
+  "count_decinc" : [ -2, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -2, +3 ]
 }
