@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-13T01:24:23Z",
+  "timestamp" : "2025-09-13T12:36:53Z",
   "count_outdated" : 9525,
   "uniques_outdated" : 4672,
-  "count" : 9661,
-  "uniques" : 4773,
+  "count" : 9662,
+  "uniques" : 4774,
   "clones" : [
     {
       "timestamp": "2025-08-30T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2025-08-31T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ],
       "uniques_decinc": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2025-09-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
