@@ -1,11 +1,11 @@
 {
-  "count": 136,
-  "uniques": 78,
+  "count": 135,
+  "uniques": 77,
   "clones": [
     {
       "timestamp": "2025-08-30T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-31T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-09-12T00:00:00Z",
       "count": 8,
       "uniques": 7
+    },
+    {
+      "timestamp": "2025-09-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
